--- a/Dia 15/MySqlForm/MySqlForm.vcxproj
+++ b/Dia 15/MySqlForm/MySqlForm.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Inicio.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="MsqlConexion.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Inicio.resx">
