--- a/Dia 15/MySqlForm/MySqlForm.vcxproj.filters
+++ b/Dia 15/MySqlForm/MySqlForm.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Inicio.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="MsqlConexion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
